--- a/src/Components/AboutCompany/aboutCompany.css
+++ b/src/Components/AboutCompany/aboutCompany.css
@@ -79,7 +79,7 @@ margin: 5px;
 font-weight: 400;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 850px) {
 
     .AboutCompany {
         display: flex;
@@ -100,12 +100,52 @@ font-weight: 400;
  
         margin-top: 20px;
         margin-bottom: -100px;
-        margin-left: 200px;
+        margin-left: 500px;
     }
 
     .AboutCompany .textCompany {
         width: 95%;
         margin: 60px auto;
+    }
+
+    @media (max-width: 680px) {
+    .AboutCompany .boxComany .boxLogo {
+ 
+        margin-top: 20px;
+        margin-bottom: -100px;
+        margin-left: 400px;
+    }
+
+    @media (max-width: 580px) {
+        .AboutCompany .boxComany .boxLogo {
+     
+            margin-top: 20px;
+            margin-bottom: -100px;
+            margin-left: 300px;
+        }
+
+        @media (max-width: 480px) {
+            .AboutCompany .boxComany .boxLogo {
+         
+                margin-top: 20px;
+                margin-bottom: -100px;
+                margin-left: 200px;
+            }
+
+            @media (max-width: 380px) {
+                .AboutCompany .boxComany .boxLogo {
+             
+                    margin-top: 0px;
+                    margin-bottom: -70px;
+                    margin-left: 100px;
+                }
+                
+                }
+            
+            }
+        
+        }
+
     }
     
     
